RESOLVED FIXED194472
[GTK] Fix typo in the newly added API
https://bugs.webkit.org/show_bug.cgi?id=194472
Summary [GTK] Fix typo in the newly added API
Alice Mikhaylenko
Reported 2019-02-09 02:27:23 PST
I shouldn't have used find and replace to change allow -> enabled in https://bugs.webkit.org/show_bug.cgi?id=193919
Attachments
Patch (2.94 KB, patch)
2019-02-09 02:30 PST, Alice Mikhaylenko
mcatanzaro: review+
Alice Mikhaylenko
Comment 1 2019-02-09 02:30:25 PST
EWS Watchlist
Comment 2 2019-02-09 02:32:17 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Michael Catanzaro
Comment 3 2019-02-09 08:03:13 PST
Comment on attachment 361605 [details] Patch We also need #if PLATFORM(GTK) guards in the WebKitSettings.cpp, since it's not available for WPE.
Michael Catanzaro
Comment 4 2019-02-09 08:04:13 PST
Michael Catanzaro
Comment 5 2019-02-09 08:05:03 PST
(In reply to Michael Catanzaro from comment #3) > Comment on attachment 361605 [details] > Patch > > We also need #if PLATFORM(GTK) guards in the WebKitSettings.cpp, since it's > not available for WPE. I see it's already in a larger group of guards. (I wonder why the font size setting is GTK-specific....)
Note You need to log in before you can comment on or make changes to this bug.