[GTK] Fix typo in the newly added API https://bugs.webkit.org/show_bug.cgi?id=194472

Patch by Alexander Mikhaylenko <exalm7659@gmail.com> on 2019-02-09
Reviewed by Michael Catanzaro.

Fix a typo: enableed -> enabled.

* UIProcess/API/glib/WebKitSettings.cpp:
(webkit_settings_set_enable_back_forward_navigation_gestures):
* UIProcess/API/gtk/WebKitSettings.h:

Canonical link: https://commits.webkit.org/208899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241240 268f45cc-cd09-0410-ab3c-d52691b4dbfc